syntax = "proto3";

package interaction;

option go_package=".;interaction";

service Interaction {
  rpc FavoriteAction(FavoriteActionReq) returns(Empty);
  rpc FavoriteList(FavoriteListReq) returns (FavoriteListResp);
  rpc CommentAction(CommentActionReq) returns(CommentActionResp);
  rpc CommentList(CommentListReq) returns(CommentListResp);
}

message FavoriteActionReq {
  int64 VideoId = 1;
  int64 ActionType = 2;
}

message Empty {
}

message FavoriteListReq {
    int64 UserId = 1;
}

message FavoriteListResp {
    User   Author = 1;             // 视频作者信息
    int64  CommentCount = 2;   // 视频的评论总数
    string CoverURL = 3;    // 视频封面地址
    int64  FavoriteCount =4;// 视频的点赞总数
    int64  ID = 5;      // 视频唯一标识
    bool   IsFavorite = 6;// true-已点赞，false-未点赞
    string PlayURL = 7; // 视频播放地址
    string Title = 8;   // 视频标题
}

message User  {
    string Avatar = 1;           // 用户头像
    string BackgroundImage = 2; // 用户个人页顶部大图
    int64  FavoriteCount = 3;   // 喜欢数
    int64  FollowCount = 4;     // 关注总数
    int64  FollowerCount = 5;   // 粉丝总数
    int64  ID = 6;              // 用户id
    bool   IsFollow = 7;        // true-已关注，false-未关注
    string Name = 8;         // 用户名称
    string Signature = 9;      // 个人简介
    string TotalFavorited = 10;  // 获赞数量
    int64  WorkCount = 11;  // 作品数
}

enum ActionType {
  PublishComment = 0;
  DelComment = 1;
}

message CommentActionReq {
  int64 VideoId = 1;
  ActionType ActionType = 2; // 0 发布评论， 1 删除评论
  string CommentText = 3; // 发布评论带上字段
  int64 CommentId = 4; // 删除评论带上字段
}

message CommentActionResp {
  int64 CommentId = 1; // 评论的id
  User Author = 2; // 发表评论的用户
  string Content = 3; // 评论内容
  string CreateAt = 4; // 发布时间
}

message CommentListReq {
  int64 VideoId = 1; // 视频id
}

message CommentListResp {
  repeated CommentActionResp CommentList = 1; // 评论列表
}

